--- a/portfolio html css/index.html
+++ b/portfolio html css/index.html
@@ -14,7 +14,11 @@
     <main>
       <section id="left-section">
         <div class="image">
-          <img src="/assets/logo.jpg" alt="Profile Image" class="img-profile" />
+          <img
+            src="/assets/Profile Img.png"
+            alt="Profile Image"
+            class="img-profile"
+          />
         </div>
         <div class="name">
           <h3>
@@ -31,7 +35,6 @@
             <li class="current"><a href="#about">About</a></li>
             <li class="current"><a href="#services">Services</a></li>
             <li class="current"><a href="#portfolio">Portfolio</a></li>
-            <li class="current"><a href="#blog">Blog</a></li>
             <li class="current"><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -68,7 +71,7 @@
                       <span>Creative&nbsp;</span><span id="element"></span>
                     </h3>
 
-                    <h3>Based In Pakistan</h3>
+                    <h3>Based In USA</h3>
                   </div>
                   <div class="description">
                     <p>
@@ -91,9 +94,7 @@
                         >
                       </li>
                       <li>
-                        <a href="#" class="location"
-                          >Ave Street Avenue, New York</a
-                        >
+                        <a href="#" class="location">Balconess Drive, Texas</a>
                       </li>
                     </ul>
                   </div>
@@ -406,13 +407,13 @@
                 </div>
                 <div class="contact-info">
                   <ul>
-                    <li class="contact-li">+92 331 2477848</li>
+                    <li class="contact-li">+1 (512) 961 8675</li>
                   </ul>
                   <ul>
                     <li class="contact-li">waleed.taher17@gmail.com</li>
                   </ul>
                   <ul>
-                    <li class="contact-li">Ave Street Avenue, New York</li>
+                    <li class="contact-li">Balcones Drive, Texas</li>
                   </ul>
                 </div>
               </div>
@@ -446,7 +447,13 @@
                 width="80%"
                 height="375"
                 id="gmap_canvas"
-                src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.6456815463252!2d-97.76074260000001!3d30.3325946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644cae3e3500b91%3A0xac270d748db0279d!2sBalcones%20Dr%2C%20Austin%2C%20TX%2078731%2C%20USA!5e0!3m2!1sen!2s!4v1693318419191!5m2!1sen!2s"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
                 frameborder="0"
                 scrolling="no"
                 marginheight="0"
